--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <section id="sobre-mi" class="sobre-mi seccion-oscura">
       <div class="contenedor">
         <h2 class="seccion-titulo">Conoceme mas</h2>
-        <p class="seccion-texto">Analista en Informática y estudiante de la Licenciatura en Informática. Me apasiona el desarrollo de software y la creación de sitios web. Tengo experiencia en HTML, CSS, Bootstrap, JavaScript y bases de datos, lo que me permite crear sitios web funcionales, dinámicos y visualmente atractivos. Actualmente, estoy buscando mi primera experiencia laboral en el ámbito de la tecnología. Estoy motivado por el deseo de aprender, crecer profesionalmente y aportar valor a los equipos con los que trabaje. Mi objetivo es formarme como un profesional integral, combinando mi pasión por la tecnología con la capacidad de crear soluciones innovadoras y efectivas.</p>
+        <p class="seccion-texto">Analista en Informática y estudiante de la Licenciatura en Informática. Me apasiona el desarrollo de software y la creación de sitios web. Tengo experiencia en HTML, CSS, Bootstrap, JavaScript y bases de datos. Actualmente, estoy buscando mi primera experiencia laboral en el ámbito de la tecnología. Estoy motivado por el deseo de aprender, crecer profesionalmente y aportar valor a los equipos con los que trabaje.</p>
       </div>
     </section>
 
