Modificacion de proyectos

--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
           <!--proyecto 1-->
           <div class="col-12 col-md-6 col-lg-4">
             <div class="proyecto">
-              <img src="imagenes/FreeCur.png" alt="Proyecto 1">
+              <img src="imagenes/perrosweb.png" alt="Proyecto 1">
               <div class="overlay">
-                <p>FreeCur - Cursos</p>
+                <p>Adopción de animales</p>
                 <div class="iconos-contenedor">
-                  <a href="https://mateoc63.github.io/FreeCur/" target="_blank" rel="noopener noreferrer">
+                  <a href="https://mateoc63.github.io/web-animales-en-adopcion/" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-github"></i>
                   </a>
                 </div>
@@ -119,11 +119,11 @@
           <!--proyecto 3-->
           <div class="col-12 col-md-6 col-lg-4">
             <div class="proyecto">
-              <img src="imagenes/web-animales.png" alt="Proyecto 3">
+              <img src="imagenes/FreeCur.png" alt="Proyecto 3">
               <div class="overlay">
-                <p>Adopción de animales</p>
+                <p>FreeCur - Cursos</p>
                 <div class="iconos-contenedor">
-                  <a href="https://mateoc63.github.io/web-animales-en-adopcion/" target="_blank" rel="noopener noreferrer">
+                  <a href="https://mateoc63.github.io/FreeCur/" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-github"></i>
                   </a>
                 </div>
