--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
             <img class="hero-imagen-desarrollador rounded-circle" src="imagenes/yo.jpg" alt="Foto de Mateo Cagnoni">
             <h1>Hola, soy Mateo Cagnoni</h1>
-            <h2>Desarrollo sitios webs y soy Estudiante</h2>
+            <h2>Desarrollo sitios webs</h2>
         </div>
         <div class="hero-inferior">
           <img class="hero-inferior-img img-fluid" src="imagenes/hero-inferior.svg" alt="Monitor, laptop y lgoos de HTML, CSS, JavaScript y React">
@@ -74,7 +74,7 @@
     <!--sobre mi seccion-->
     <section id="sobre-mi" class="sobre-mi seccion-oscura">
       <div class="contenedor">
-        <h2 class="seccion-titulo">Conoceme mas</h2>
+        <h2 class="seccion-titulo">Conoceme más</h2>
         <p class="seccion-texto">Analista en Informática y estudiante de la Licenciatura en Informática. Me apasiona el desarrollo de software y la creación de sitios web. Tengo experiencia en HTML, CSS, Bootstrap, JavaScript y bases de datos. Actualmente, estoy buscando mi primera experiencia laboral en el ámbito de la tecnología. Estoy motivado por el deseo de aprender, crecer profesionalmente y aportar valor a los equipos con los que trabaje.</p>
       </div>
     </section>
